<resources>
    <string name="app_name">My Application</string>
    <string name="txt_name">My Love,</string>
    <string name="txt_header">You Like A Flower</string>
    <string name="txtChoice">Editor\'s Choice</string>
    <string name="txtdescription">We\'re all Myanmar.We\'re all MyanmarWe\'re all MyanmarWe\'re all MyanmarWe\'re all MyanmarWe\'re all MyanmarWe\'re all MyanmarWe\'re all Myanmar</string>
    <string name="btn_text">ORDER NOW</string>
</resources>
